some more cverd

--- a/index.html
+++ b/index.html
@@ -10,24 +10,21 @@
 <body>
 	<h1>United Gospel Christian Association</h1>
 	<div class="main">
-		<img src="photos/1.jpg">
-	</div>
-	<div class="part">
-		<div>
-		<img src="photos/2.jpg">
-		<h2>David</h2>
-		<p>Hyderabad</p>
-		</div>
-		<div>
-		<img src="photos/3.jpg">
-		<h2>David2</h2>
-		<p>Hyderabad</p>
-		</div>
-		<div>
-		<img src="photos/1.jpg">
-		<h2>David3</h2>
-		<p>Hyderabada</p>
-		</div>
+			<div>
+			<img id="poto" src="photos/2.jpg">
+			<h3>David1</h3><hr>
+			<p>Hyderabad</p>
+			</div>
+			<div>
+			<img id="poto" src="photos/3.jpg">
+			<h2>David2</h2>
+			<p>Hyderabad</p>
+			</div>
+			<div>
+			<img id="poto" src="photos/1.jpg">
+			<h2>David3</h2>
+			<p>Hyderabada</p>
+			</div>
 	</div>
 </body>
 </html>
