--- a/index.html
+++ b/index.html
@@ -8,22 +8,35 @@
 
 </head>
 <body>
-	<h1>United Gospel Christian Association</h1>
+	<h1 class="h1">The United Gospel Christian Association,<br>
+	<small>Machilipatnam, Krishna District, Andhra Pradesh</small>
+	</h1>
 	<div class="main">
 			<div>
 			<img id="poto" src="photos/2.jpg">
-			<h3>David1</h3><hr>
-			<p>Hyderabad</p>
+			<h3>Mr. David Manoj</h3>
+			<p>Designer from Hyderabad</p>
+			<p style="text-align: left;">The school has 260 pupils on roll (who attend free of charge). The school is attended by 
+the children from the orphanage ages 3 – 15 and many children from disadvantaged backgrounds 
+in the local. so that it can keep its status as a 
+recognized educational establishment.
+</p>
 			</div>
 			<div>
 			<img id="poto" src="photos/3.jpg">
-			<h3>David2</h3>
-			<p>Hyderabad</p>
+			<h3>Ms Deevena</h3>
+			<p>Singer from Delhi</p>
+			<p style="text-align: left;">The orphanage at present has about 115 children from the ages of 3 – 17 and Emmanuel and Deevena are responsible for feeding, clothing, and taking care of all their needs 24 hours a day. They are also responsible for paying for the utilities and up keep of the orphanage buildings.</p>
 			</div>
 			<div>
 			<img id="poto" src="photos/1.jpg">
-			<h3>David3</h3>
-			<p>Hyderabada</p>
+			<h3>BIshop Dyva</h3>
+			<p>Moderator, CSI from Vijayawada</p>
+			<p style="text-align: left;">The project supports these churches and their pastors,
+(which are spread over a very wide area), in a number of ways which include; 
+financial support, provision of transportation such as cycles, providing resources 
+such as bibles, tracks, and musical instruments, and giving help to build and 
+maintain their homes and churches</p>
 			</div>
 	</div>
 </body>
