--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TheUCGA</title>
+	<title>TheDav</title>
 	<link rel="icon" href="photos/cross.ico">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
-	<h1 class="h1">The United Gospel Christian Association,<br>
+	<h1 class="h1">The Development Association Vision <br>
 	<small>Machilipatnam, Krishna District, Andhra Pradesh</small>
 	</h1>
 	<div class="main">
@@ -24,14 +24,14 @@ recognized educational establishment.
 			</div>
 			<div>
 			<img id="poto" src="photos/3.jpg">
-			<h3>Ms Deevena</h3>
+			<h3>Ms Priya</h3>
 			<p>Singer from Delhi</p>
-			<p style="text-align: left;">The orphanage at present has about 115 children from the ages of 3 – 17 and Emmanuel and Deevena are responsible for feeding, clothing, and taking care of all their needs 24 hours a day. They are also responsible for paying for the utilities and up keep of the orphanage buildings.</p>
+			<p style="text-align: left;">The orphanage at present has about 115 children from the ages of 3 – 17 and DAV are responsible for feeding, clothing, and taking care of all their needs 24 hours a day. They are also responsible for paying for the utilities and up keep of the orphanage buildings.</p>
 			</div>
 			<div>
 			<img id="poto" src="photos/1.jpg">
-			<h3>BIshop Dyva</h3>
-			<p>Moderator, CSI from Vijayawada</p>
+			<h3>Dr. Manoj </h3>
+			<p>Director from Vijayawada</p>
 			<p style="text-align: left;">The project supports these churches and their pastors,
 (which are spread over a very wide area), in a number of ways which include; 
 financial support, provision of transportation such as cycles, providing resources 
