--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-	<h1 class="h1">The Development Association Vision <br>
+	<h1 class="h1">The Davids Asian Vision <br>
 	<small>Machilipatnam, Krishna District, Andhra Pradesh</small>
 	</h1>
 	<div class="main">
@@ -16,7 +16,7 @@
 			<img id="poto" src="photos/2.jpg">
 			<h3>Mr. David Manoj</h3>
 			<p>Designer from Hyderabad</p>
-			<p style="text-align: left;">The school has 260 pupils on roll (who attend free of charge). The school is attended by 
+			<p style="text-align: jestify;">The school has 260 pupils on roll (who attend free of charge). The school is attended by 
 the children from the orphanage ages 3 – 15 and many children from disadvantaged backgrounds 
 in the local. so that it can keep its status as a 
 recognized educational establishment.
