--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TheDav</title>
+	<title>TheDAV</title>
 	<link rel="icon" href="photos/cross.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 <body>
-	<h1 class="h1">The Davids Asian Vision <br>
+	<h1 class="h1">The Davio Asiao Vision <br>
 	<small>Machilipatnam, Krishna District, Andhra Pradesh</small>
 	</h1>
 	<div class="main">
@@ -24,7 +24,7 @@ recognized educational establishment.
 			</div>
 			<div>
 			<img id="poto" src="photos/3.jpg">
-			<h3>Ms Priya</h3>
+			<h3>Mr. Asio</h3>
 			<p>Singer from Delhi</p>
 			<p style="text-align: left;">The orphanage at present has about 115 children from the ages of 3 – 17 and DAV are responsible for feeding, clothing, and taking care of all their needs 24 hours a day. They are also responsible for paying for the utilities and up keep of the orphanage buildings.</p>
 			</div>
