--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -4,6 +4,7 @@
 	<title>TheDAV</title>
 	<link rel="icon" href="photos/cross.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
