--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>TheDAV</title>
 	<link rel="icon" href="/photos/cross.ico">
-	<link rel="stylesheet" type="text/css" href="/css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,7 +14,7 @@
 	</h1>
 	<div class="main">
 			<div>
-			<img id="poto" src="/photos/2.jpg">
+			<img id="poto" src="/TheDAV/photos/2.jpg">
 			<h3>Mr. David Manoj</h3>
 			<p>Designer from Hyderabad</p>
 			<p style="text-align: jestify;">The school has 260 pupils on roll (who attend free of charge). The school is attended by 
