--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 	<h1 class="h1">The Davio Asiao Vision <br>
-	<small>Machilipatnam, Krishna District, Andhra Pradesh</small>
+	<small>This is sinmple HTML & CSS used site Thnak you </small>
 	</h1>
 	<div class="main">
 			<div>
-			<img id="poto" src="/TheDAV/photos/2.jpg">
+			<img id="poto" src="2.jpg">
 			<h3>Mr. David Manoj</h3>
 			<p>Designer from Hyderabad</p>
 			<p style="text-align: jestify;">The school has 260 pupils on roll (who attend free of charge). The school is attended by 
@@ -24,13 +24,13 @@ recognized educational establishment.
 </p>
 			</div>
 			<div>
-			<img id="poto" src="/photos/3.jpg">
+			<img id="poto" src="3.jpg">
 			<h3>Mr. Asio</h3>
 			<p>Singer from Delhi</p>
 			<p style="text-align: left;">The orphanage at present has about 115 children from the ages of 3 – 17 and DAV are responsible for feeding, clothing, and taking care of all their needs 24 hours a day. They are also responsible for paying for the utilities and up keep of the orphanage buildings.</p>
 			</div>
 			<div>
-			<img id="poto" src="/photos/1.jpg">
+			<img id="poto" src="1.jpg">
 			<h3>Dr. Manoj </h3>
 			<p>Director from Vijayawada</p>
 			<p style="text-align: left;">The project supports these churches and their pastors,
