--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 <head>
 	<title>TheDAV</title>
-	<link rel="icon" href="/photos/cross.ico">
+	<link rel="icon" href="cross.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="dist/css/bootstrap.min.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 </head>
 <body>
